Traefik-external/unifi/ingress.yml
apiVersion: v1
kind: Namespace
metadata:
  name: unifi # change me
---
kind: Service
apiVersion: v1
metadata:
  name: unifi # change me
  namespace: unifi # change me
spec:
  type: ExternalName
  ports:
    - name: https # change me
      port: 8443 # change me
      targetPort: 8443 # change me
  externalName: 192.168.2.15 # change me
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi # change me
  namespace: unifi # change me
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.unifi.kbtech.org`) # change me
      kind: Rule
      services:
        - name: unifi # change me
          port: 8443 # change me
    - match: Host(`unifi.kbtech.org`) # change me
      kind: Rule
      services:
        - name: unifi # change me
          port: 8443 # change me
      middlewares:
        - name: default-headers
  tls:
    secretName: kbtech-tls # change me
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: unifi # change me
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
